[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/jose-augusto-cestaro-cenario-floresta-noite.jpg" type="Texture" id=1]
[ext_resource path="res://src/UI/SelectedPlayer.gd" type="Script" id=2]
[ext_resource path="res://assets/gui/bouton_charg0.png" type="Texture" id=3]
[ext_resource path="res://assets/gui/bouton_croix0.png" type="Texture" id=4]
[ext_resource path="res://assets/gui/bouton_croix1.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/LanaPixel.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/Worn-Parchment-BG-1.png" type="Texture" id=7]
[ext_resource path="res://assets/gui/bouton_charg1.png" type="Texture" id=8]
[ext_resource path="res://src/UI/StartGame.gd" type="Script" id=9]
[ext_resource path="res://assets/gui/arrow_example.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=2]
size = 35
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 6 )

[node name="SelectedPlayer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
stretch_mode = 1

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.37842
margin_top = 2.37842
margin_right = 2.37842
margin_bottom = 2.37842
color = Color( 0, 0, 0, 0.345098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="ColorRect"]
position = Vector2( 373.411, 94.8189 )

[node name="Back" type="TextureButton" parent="ColorRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -203.313
margin_top = 42.8373
margin_right = -103.313
margin_bottom = 192.837
rect_rotation = -180.0
rect_pivot_offset = Vector2( 46.379, 71.5496 )
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -144.5
margin_top = -230.0
margin_right = 144.5
margin_bottom = -134.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 8 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Начать игру"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
self_modulate = Color( 0, 0, 0, 0.643137 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="ColorRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -377.0
margin_top = -125.5
margin_right = 377.0
margin_bottom = 125.5
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="ColorRect2/TextureRect2"]
margin_left = 731.148
margin_top = -30.4056
margin_right = 791.148
margin_bottom = 29.5944
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect2/TextureRect2"]
margin_left = 85.0
margin_top = 43.0
margin_right = 672.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 1 )
text = "Чтобы открыть героя пройдите боса \"загадочный лучник\""
align = 1
valign = 1
autowrap = true
[connection signal="button_up" from="ColorRect/Back" to="." method="_on_Back_button_up"]
[connection signal="button_up" from="TextureButton" to="TextureButton" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="ColorRect2/TextureRect2/TextureButton" to="." method="_on_TextureButton_button_up"]
